--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    height:100%
 }
 
 a {
@@ -17,4 +19,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+#__next {
+  @apply h-full
 }
