--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color:white
 }
 
 .footer {
@@ -29,7 +30,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #EFAF23;
   text-decoration: none;
 }
 
@@ -57,6 +58,7 @@
 }
 
 .code {
+  color: black;
   background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
@@ -88,8 +90,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #EFAF23;
+  border-color: #EFAF23;
 }
 
 .card h2 {
