--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Cooper Black";
+  src: url("../public/fonts/cooper-black.ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../public/fonts/Poppins-Regular.woff2");
+}
 
 html,
 body {
@@ -9,7 +18,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    height:100%
+  height: 100%;
 }
 
 a {
@@ -22,5 +31,11 @@ a {
 }
 
 #__next {
-  @apply h-full
+  @apply h-full;
+}
+
+.glow {
+  /* Orange glow */
+  text-shadow: 0px 4px 50px rgba(239, 175, 35, 0.15),
+    0px 4px 25px rgba(239, 175, 35, 0.15), 0px 0px 15px rgba(239, 175, 35, 0.15);
 }
