--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,12 @@
 
 @font-face {
   font-family: "Cooper Black";
-  src: url("../public/fonts/cooper-black.ttf");
+  src: url("../public/static/fonts/cooper-black.ttf");
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("../public/fonts/Poppins-Regular.woff2");
+  src: url("../public/static/fonts/Poppins-Regular.woff2");
 }
 
 html,
@@ -31,7 +31,7 @@ a {
 }
 
 #__next {
-  @apply h-full;
+  @apply min-h-screen;
 }
 
 .glow {
