Fighting with checkout flows. Added basic cart. Stripe is giving me a headache

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ a {
 }
 
 .form_field {
-  @apply border-2 border-zinc-200 rounded-full px-3 py-2
+  @apply border-2 border-zinc-200 rounded-lg px-3 py-2 text-zinc-900 focus:bg-yellow-50
 }
 
 .form_field_label {
@@ -49,5 +49,5 @@ a {
 }
 
 .submit_button {
-  @apply bg-yellow-500 rounded-full w-full sm:w-max px-20 py-2 self-center
+  @apply bg-yellow-500 rounded-full w-full sm:w-max px-20 py-2 text-zinc-900
 }
