--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,5 +53,7 @@ a {
 }
 
 .button {
-  @apply text-zinc-900 bg-primary rounded-md w-max px-6 glow py-2 self-center font-bold
+  @apply text-zinc-900 bg-primary rounded-md w-max px-6 py-2 self-end disabled:ring-1 ring-zinc-700
+          font-bold hover:brightness-95 active:scale-95 transition-all ease-out duration-100
+          disabled:bg-zinc-800 disabled:active:scale-100 disabled:hover:brightness-100 disabled:select-none disabled:text-zinc-700
 }
